# scribectl

./: .envrc  .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  pyproject.toml  scribectl.dispatch.json
.agents/overlays/: scribectl.state-protocols.md
.agents/skills/: body_fill.md  brainstorm.md  review_canon.md  review_mechanics.md  review_voice.md
.claude/skills/: sprint-close  sprint-maintenance  sprint-packet  sprint-resume  sprint-snapshot  task-pickup
.github/workflows/: pages.yml  test.yml
.sprintctl/: backend.json
docs/: ARCHITECTURE.md  DESIGN.md  DISPATCH.md  GUIDE.md  RATIFICATION.md  STATE_PROTOCOLS.md
docs/drafts/: scribectl-semantic-verification-worker-prompt.md
docs/sprint/: backlog.md  current.md
fertile-flames-pipeline/: PLAN.md  README.md  ff.py
fertile-flames-pipeline/pipeline/: contextpack.py  project.py  vault.py
fertile-flames-pipeline/templates/: canon_node.md  ratification_log.md  review_report.md
fixtures/fertile-flames/: Fertile Flames.md
fixtures/runosong/: Runosong.md
ops/scribe-dispatch/: README.md  scribe-dispatch-watch.service  scribe-dispatch-watch.timer  watch.env
ops/vllm-writer/: README.md  bakeoff-writer.sh  vllm-writer-run  vllm-writer.service  writer.env
ops/vscode/: README.md  scribectl.code-workspace  tasks.json
scribectl/: cli.py  config.py  doctor.py  templateset.py
scribectl/core/: contextpack.py  digest.py  inbox.py  miningpack.py  (+3 more)
scribedispatch/: __init__.py  cli.py  engine.py  landing.py  policy.py  runner.py  skills.py  vaultio.py
site/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_contextpack.py  test_digest.py  test_dispatch.py  test_essay.py  test_gamedev.py  test_inbox.py  test_miningpack.py  test_ops_assets.py  test_project.py  test_state_protocol_assets.py  test_timeline.py  test_vault.py
(+74 files in other folders)
