[project]
name = "scribectl"
version = "0.1.0"
description = "Contract runner for writing projects living in an Obsidian vault"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
scribectl = "scribectl.cli:main"
scribe-dispatch = "scribedispatch.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scribectl", "scribedispatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
