[project]
name = "scribectl"
version = "0.1.0"
description = "Contract runner for writing projects living in an Obsidian vault — frozen context packs, agent-drafted prose, human-ratified canon"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Juha Huotari" }]
requires-python = ">=3.11"
keywords = ["obsidian", "writing", "worldbuilding", "llm-agents", "canon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/bayleafwalker/scribectl"
Documentation = "https://github.com/bayleafwalker/scribectl/blob/main/docs/GUIDE.md"

[project.scripts]
scribectl = "scribectl.cli:main"
scribe-dispatch = "scribedispatch.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scribectl", "scribedispatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
